Adapt Burrower tests to Java 17